# MOSIG

./: .gitignore
alg-prob-solving/TP4/: build.sh  gen_points  gen_points.cpp  input.txt  main.cpp  tp4
crypto/: CMakeLists.txt  colsearch.h  combination.h  hashset.h  ht48.c  ht48.h  ht48_2.tar.bz2  keyrec.h  main.c  main_colsearch.c  main_keyrec.c  main_mac.c  main_test.c  smht48.h
data-science/: COMPAS-notebook-task.ipynb  tp-supervised-sklearn.ipynb
data-science/.ipynb_checkpoints/: COMPAS-notebook-task-checkpoint.ipynb  tp-supervised-sklearn-checkpoint.ipynb
intelligent-systems/: 1.Performance_evaluation_student.ipynb  2.Unsupervised.ipynb  4.Regularization_ILIN_Andrei.ipynb  gut_abundances.tsv  ibd_status.lst
intelligent-systems/.ipynb_checkpoints/: 1.Performance_evaluation_student-checkpoint.ipynb  2.Unsupervised-checkpoint.ipynb  3.Supervised-checkpoint.ipynb
intelligent-systems/TP6-ObjectRecognition/: TP6.ipynb  model.py  readme.md  utils.py
intelligent-systems/caseine/: got.csv  t2.py  t3.py  test-pyDatalog.py  trains.csv
internship/: internship.md
modeling-and-verification/lab2/: count.txt  design.txt  testbench.txt
operation-research/: a.out  knapsack.cpp
parallel/lab_04_mpi_lattice_boltzmann/: .gitignore  Makefile  bench_correction.sh  check_comm  display  exercise_1.c  exercise_2.c  exercise_3.c  exercise_4.c  exercise_5.c  exercise_6.c  lbm
visual-computing/tp1/: Makefile  Makefile copy  Plain Text.txt  Util.c  component_extractor  component_extractor.c  mandrill.pgm  mandrill1  mandrill2  pgmtopgm  pgmtopgm.c  test
(+200 files in other folders)
